fix: misalignment on category picker

--- a/desktop/src/app/components/widgets/category-picker.scss
+++ b/desktop/src/app/components/widgets/category-picker.scss
@@ -166,7 +166,8 @@ category-picker .category-item,
     }
 
     .category-label {
-        display: inline-block;
+        display: flex;
+        align-items:center ;
         margin-left: 40px;
         width: calc(100% - 50px);
         font-size: 15px;
